--- a/public/writes/index.html
+++ b/public/writes/index.html
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="shortcut icon" href="https://argha-c.github.io/favicon.ico">
-    <link rel="alternate" type="application/rss+xml" href="https://argha-c.github.io/tags/index.xml" title="Argha C">
+    <link rel="alternate" type="application/rss+xml" href="https://argha-c.github.io/writes/index.xml" title="Argha C">
     
     <link rel="stylesheet" href="/css/style.min.css">
 
-    <title>Tags</title>
+    <title>Writes</title>
 </head>
 <body><header id="banner">
     <h2><a href="https://argha-c.github.io/">Argha C</a></h2>
