--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,16 @@
 <h3>Posts</h3>
 <ul id="posts">
 
+    <li>
+        <a href="https://argha-c.github.io/writes/intro/">Intro<small><time>Jun 30, 2020</time></small>
+        </a>
+    </li>
+
+    <li>
+        <a href="https://argha-c.github.io/writes/java-14/">Java 14<small><time>May 9, 2020</time></small>
+        </a>
+    </li>
+
 </ul>
 
         </main><footer id="footer">
