--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" media="screen" href="https://www.argha.devcss/main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://www.argha.dev/css/main.css" />
 </head>
 	<body>
 		<div class="content">
