--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Argha C"/>
 <meta name="twitter:description" content=""/>
-
+<script src="https://www.argha.devjs/feather.min.js"></script>
+	
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" media="screen" href="https://www.argha.dev/css/main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://www.argha.devcss/main.css" />
 </head>
 	<body>
 		<div class="content">
@@ -38,6 +39,14 @@
 		<a href="https://www.argha.dev">Argha C</a>
 	</div>
 	<nav>
+		
+		<a href="/">Home</a>
+		
+		<a href="/posts">Writes</a>
+		
+		<a href="/about">About</a>
+		
+		<a href="/tags">Tags</a>
 		
 	</nav>
 </header>
@@ -65,12 +74,14 @@
 
 			</main>
 			<footer>
-<hr>⚡️
-	2020  <a href="https://github.com/athul/archie">Archie Theme</a> | Built with <a href="https://gohugo.io">Hugo</a>
+<hr><a class="soc" href="https://twitter.com/argha7c" title="Twitter"><i data-feather="twitter"></i></a>|⚡️
+	2020  © Argha C |  <a href="https://github.com/athul/archie">Archie Theme</a> | Built with <a href="https://gohugo.io">Hugo</a>
 </footer>
 
 
-
+<script>
+      feather.replace()
+</script>
 		</div>
 		
 	</body>
