--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Argha C"/>
 <meta name="twitter:description" content=""/>
-<script src="https://www.argha.devjs/feather.min.js"></script>
+<script src="https://www.argha.dev/js/feather.min.js"></script>
 	
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" media="screen" href="https://www.argha.devcss/main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://www.argha.dev/css/main.css" />
 </head>
 	<body>
 		<div class="content">
 			<header>
 	<div class="main">
-		<a href="https://www.argha.dev">Argha C</a>
+		<a href="https://www.argha.dev/">Argha C</a>
 	</div>
 	<nav>
 		
