--- a/public/about/index.html
+++ b/public/about/index.html
@@ -26,6 +26,8 @@
 			
 			<a href="/posts"><b>Writes</b></a>.
 			
+			<a href="/articles"><b>Articles</b></a>.
+			
 			<a href="/tags"><b>Tags</b></a>.
 			
 			<a href="/about"><b>About</b></a>.
@@ -60,7 +62,7 @@ Work has taken me across 4 continents, and spans over a decade, by now.</p>
 		<div>
 			<ul>
 				
-				<li><a href="/posts/java14/">Java 14</a></li>
+				<li><a href="/articles/lessons-in-resilience/">Lessons in resilience</a></li>
 				
 			</ul>
 		</div>
