--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
 			
 			<a href="/posts"><b>Writes</b></a>.
 			
+			<a href="/articles"><b>Articles</b></a>.
+			
 			<a href="/tags"><b>Tags</b></a>.
 			
 			<a href="/about"><b>About</b></a>.
@@ -41,16 +43,17 @@
 		
 		
 			<article>
-	<h1><a href="https://www.argha.dev/posts/java14/">Java 14</a></h1>
+	<h1><a href="https://www.argha.dev/articles/lessons-in-resilience/">Lessons in resilience</a></h1>
 	<b><time>09.05.2020 00:00</time></b>
 	
 	<a href="/tags/programming">programming</a>
 	
 	<div>
-		The future looks promising Java 14 proposals have got me excited. There seems to be a clear interest in making certain concepts from the functional paradigm mainstream. Few specific ones that are top of mind for me are listed:
- JEP 360: Sealed Types (Preview) JEP 384: Records (Second Preview) JEP 375: Pattern Matching for instanceof (Second Preview) JEP 361: Switch Expressions (Standard)  (While I haven&rsquo;t taken the time to describe what each of these imply, reading the abstract should provide an idea.
+		Back in 2016, I wrote this article on resilience with microservices, based on my experiences using Finagle.
+Read &quot;Lessons in resilience at SoundCloud&quot; by @argha7c - more learnings on microservices with Finagle https://t.co/ji4qG3CbbH
+&mdash; SoundCloud Devs (@SoundCloudDev) December 8, 2016  While this predates the days of service mesh, some of the early adopters found our experiences valuable, and the early aspects of resilience and client side load balancing features in the service mesh were pretty close to what the post details @argha7c this was inspired by your soundcloud post!
 		
-			<a href="https://www.argha.dev/posts/java14/">Read more...</a>
+			<a href="https://www.argha.dev/articles/lessons-in-resilience/">Read more...</a>
 		
 	</div>
 </article>
