--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 	
 	<div>
 		Back in 2016, I wrote this article on resilience with microservices, based on my experiences using Finagle.
-Read &quot;Lessons in resilience at SoundCloud&quot; by @argha7c - more learnings on microservices with Finagle https://t.co/ji4qG3CbbH
-&mdash; SoundCloud Devs (@SoundCloudDev) December 8, 2016  While this predates the days of service mesh, some of the early adopters found our experiences valuable, and the early aspects of resilience and client side load balancing features in the service mesh were pretty close to what the post details @argha7c this was inspired by your soundcloud post!
+The post talks about the evolution from using simple circuit breakers to more mature client-side load balancing features, in the service mesh world.
+While this predates the days of service mesh, some of the early adopters found our experiences valuable, and the early aspects of resilience and client side load balancing features in the service mesh were pretty close to what the post details @argha7c this was inspired by your soundcloud post!
 		
 			<a href="https://www.argha.dev/articles/lessons-in-resilience/">Read more...</a>
 		
