Update home page content order

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div style="float: right;"></div><br>
 	<p>
 	<nav>
-			<a href="/"><b>Start</b></a>.
+			<a href="/"><b>Home</b></a>.
 			
 			
 			<a href="/writes"><b>Writes</b></a>.
@@ -39,10 +39,26 @@
 	
 	<main>
 		
+			
+				<article>
+	<h1><a href="https://www.argha.dev/writes/java14/">Java 14</a></h1>
+	<b><time>Saturday, May 9, 2020</time></b>
+	
+	<a href="/tags/programming">programming</a>
+	
+	<div>
+		The future looks promising Java 14 proposals have got me excited. There seems to be a clear interest in making certain concepts from the functional paradigm mainstream. Few specific ones that are top of mind for me are listed:
+ JEP 360: Sealed Types (Preview) JEP 384: Records (Second Preview) JEP 375: Pattern Matching for instanceof (Second Preview) JEP 361: Switch Expressions (Standard)  (While I haven&rsquo;t taken the time to describe what each of these imply, reading the abstract should provide an idea.
 		
-			<article>
+			<a href="https://www.argha.dev/writes/java14/">Read more...</a>
+		
+	</div>
+</article>
+
+			
+				<article>
 	<h1><a href="https://www.argha.dev/articles/lessons-in-resilience/">Lessons in resilience</a></h1>
-	<b><time>09.05.2020 00:00</time></b>
+	<b><time>Wednesday, December 7, 2016</time></b>
 	
 	<a href="/tags/programming">programming</a>
 	
@@ -56,7 +72,7 @@ While this predates the days of service mesh, some of the early adopters found o
 	</div>
 </article>
 
-		
+			
 		<div>
 
 1 of 1
