--- a/about/index.html
+++ b/about/index.html
@@ -39,11 +39,11 @@
 	<main>
 		<article>
 			<h1>Intro</h1>
-			<b><time>Monday, January 1, 0001</time></b>
+			<b><time>Saturday, May 9, 2020</time></b>
 		       
 
 			<div>
-				<p>Hello, I&rsquo;m an engineer who loves designing solutions involving distributed systems.
+				<p>Hello, I&rsquo;m a software engineer and I enjoy writing code.
 My professional interests revolve around the JVM, concurrency, and statically typed programming languages.
 Work has taken me across 4 continents, and spans over a decade, by now.</p>
 <p>I have a mild obession with good coffee, and really good wine. I am a soccer fan, but cricket shall always remain my first love.</p>
